test/expressions/casts/castChapelArray-illegalEltCast.good
castChapelArray-illegalEltCast.chpl:2: error: illegal cast from complex(128) to bool
