test/expressions/casts/castChapelArray-illegalEltCast.chpl
var A = [1.2 + 3.4i, 5.6 + 7.8i];
var B = A: [0..1] bool;
writeln(B);
